# node-xxhash

./: .eslintignore  .gitignore  .npmignore  CMakeLists.txt  jsconfig.json  license  package.json  readme.md
.github/workflows/: build.yml
scripts/: benchmark.js  install.js
source/: index.d.ts  index.js  index.spec.js
source/native/: common.hpp  main.cpp  xxh128.cpp  xxh128.hpp  xxh3.cpp  xxh3.hpp  xxh32.cpp  xxh32.hpp  xxh64.cpp  xxh64.hpp
